Feat: improve design and add field keyplugin

--- a/wp-content/plugins/iq-instapago/admin/css/iq-instapago-admin.css
+++ b/wp-content/plugins/iq-instapago/admin/css/iq-instapago-admin.css
@@ -8,3 +8,18 @@
     width: 30%;
     max-width: 30%;
 }
+
+/* .iq-instapago-header-settings {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+} */
+
+/* .iq-instapago-img-settings {
+    height: 10px !important;
+    width: 10px !important;
+    max-width: 150px !important;
+    display: block;
+
+    margin: 10px auto;
+} */
